[gd_scene load_steps=12 format=3 uid="uid://cxrwut22hd7pb"]

[ext_resource type="Script" uid="uid://du1qjwj7if0fk" path="res://enemy/enemy_code/final_boss.gd" id="1_2mir1"]
[ext_resource type="Texture2D" uid="uid://bh2vgghaql7xe" path="res://enemy/image_enemy/finalBossoneshot.png" id="2_kh8i1"]
[ext_resource type="PackedScene" uid="uid://c8mppk6beyulp" path="res://utility/hurt_box.tscn" id="4_i76dj"]
[ext_resource type="PackedScene" uid="uid://byxlprmy3k5oa" path="res://utility/hit_box.tscn" id="5_xqahd"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0b31y"]
radius = 6.0
height = 12.0

[sub_resource type="Animation" id="Animation_6f005"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_0dual"]
resource_name = "attack"
length = 1.5

[sub_resource type="Animation" id="Animation_gwdgb"]
resource_name = "walk"
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0ifi0"]
_data = {
&"RESET": SubResource("Animation_6f005"),
&"attack": SubResource("Animation_0dual"),
&"walk": SubResource("Animation_gwdgb")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_08go0"]
radius = 14.0
height = 44.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_04q52"]
radius = 14.0
height = 44.0

[node name="final_boss" type="CharacterBody2D"]
y_sort_enabled = true
collision_layer = 5
collision_mask = 5
motion_mode = 1
script = ExtResource("1_2mir1")
base_hp = 500
hp = 500
knockback_recovery = 10.0
experience = 10
time_orb_amount = 5
resistance = 15
enemy_damage = 5

[node name="Sprite2" type="Sprite2D" parent="."]
position = Vector2(0, 27.2885)
scale = Vector2(0.520325, 0.528856)
texture = ExtResource("2_kh8i1")
offset = Vector2(0, -53.62)
hframes = 2
vframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 14)
shape = SubResource("CapsuleShape2D_0b31y")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_0ifi0")
}

[node name="hurtbox" parent="." instance=ExtResource("4_i76dj")]
collision_layer = 4
collision_mask = 4
hurtboxtype = 1

[node name="CollisionShape2D" parent="hurtbox" index="0"]
shape = SubResource("CapsuleShape2D_08go0")

[node name="hitbox" parent="." instance=ExtResource("5_xqahd")]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" parent="hitbox" index="0"]
shape = SubResource("CapsuleShape2D_04q52")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="attack_timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[connection signal="hurt" from="hurtbox" to="." method="_on_hurtbox_hurt"]
[connection signal="timeout" from="attack_timer" to="." method="_on_attack_timer_timeout"]

[editable path="hurtbox"]
[editable path="hitbox"]
